--- a/Engenharia de Software/TA4.ipynb
+++ b/Engenharia de Software/TA4.ipynb
@@ -94,7 +94,133 @@
     "\n",
     "- Encerramento da auditoria\n",
     "- Entrega do resultado da Auditoria\n",
-    "- Apontando erros, Soluções  e/ou Ajustes.\n"
+    "- Apontando erros, Soluções  e/ou Ajustes.\n",
+    "\n",
+    "## Auditoria de Sistemas de Informações\n",
+    "\n",
+    "### Auditoria de Controle Organizacional e Operacional\n",
+    "\n",
+    "- Audita as Politicas Internas\n",
+    "- Delimitar Responsabilidades\n",
+    "- Orçamentos\n",
+    "- Politicas Globais de Informatica\n",
+    "- Intermediação de Networking\n",
+    "- Plano de capacitação\n",
+    "\n",
+    "### Auditoria de Controle de Hardware\n",
+    "\n",
+    "- Objetivo de implantar segurança física de equipamentos (Datacenters)\n",
+    "- Controlar os Hardwares\n",
+    "- Fazer inventário de Hardware:\n",
+    "  - Bios\n",
+    "  - Processadores\n",
+    "  - Sistema Operacional\n",
+    "  - Fabricantes/Modelos e Series\n",
+    "  - Placas de Som, Videos e etc\n",
+    "- Recursos para amenizar os riscos\n",
+    "  - Extintor de incêndio\n",
+    "  - Sprinklers\n",
+    "  - Firewalls\n",
+    "\n",
+    "### Auditoria de Sistema de Aplicativos\n",
+    "\n",
+    "- Objetivos:\n",
+    "  - Integridade\n",
+    "  - Confidencialidade\n",
+    "  - Privacidade\n",
+    "  - Acuidade\n",
+    "  - Disponibilidade\n",
+    "  - Versatilidade\n",
+    "  - Manutenibilidade\n",
+    "\n",
+    "- Compreender o Fluxo do aplicativo\n",
+    "  - Identificar sistema chave\n",
+    "  - Descrição do sistema\n",
+    "  - Descrição do Perfil do Sistema\n",
+    "  - Documentar Visão geral do processamento\n",
+    "  - Descrição de riscos do sistema\n",
+    "\n",
+    "### Auditoria de Redes\n",
+    "\n",
+    "- Planejamento da Rede\n",
+    "- Topologia\n",
+    "- Monitoramento e possiveis interceptações\n",
+    "- Replanejamento da Capacidade\n",
+    "- Levantar problemas operacionais\n",
+    "- Objetivo:\n",
+    "  - Segurança Fisica\n",
+    "  - Segurança Lógica\n",
+    "  - Segurança Enlace\n",
+    "  - Segurança Aplicação\n",
+    "\n",
+    "### Auditoria de Contigencia e recuperação de disastres\n",
+    "\n",
+    "- Avalia Equipe de Contigencia\n",
+    "- Plano de Disastres e Recuperações\n",
+    "- Classificação das aplicações criticas\n",
+    "- Análise de riscos potenciais\n",
+    "\n",
+    "## Mudança e Manutenção de Software\n",
+    "\n",
+    "### Categorias de Software:\n",
+    "\n",
+    "- Software de Sistema(Sistema operacional)\n",
+    "- Software de Aplicação(Roda em Cima de um sistema operacional)\n",
+    "- Software científico e de Engenharia\n",
+    "- Software embutido (Dentro do Hardware, Embarcado)\n",
+    "- Software para linhas de produto\n",
+    "- Aplicação WEB\n",
+    "- Software para inteligencia Artificial\n",
+    "\n",
+    "### Software Legado\n",
+    "\n",
+    "São software legados são softwares antigos, que precisam receber novas funcionalidades\n",
+    "- Porque eles tem uma má qualidade:\n",
+    "  - Código Complicado\n",
+    "  - Projetos não-extensiveis\n",
+    "  - Pouca ou Nenhuma documentação\n",
+    "  - Histórico de modificação mal gerido\n",
+    "- Evolução do Sistema Legado:\n",
+    "  - Adaptação para atender novas necessidades\n",
+    "  - Adaptação para corresponder a novos requisitos de negócios\n",
+    "  - Necessidade de extensão para torna-lo interoperavel\n",
+    "  - Modificação para o sistema se tornar vivel em um Ambiente de Rede.\n",
+    "\n",
+    "### Gestão de Modificação\n",
+    "\n",
+    "- Modificações são inevitaveis\n",
+    "- Gestão de Modificação:\n",
+    "  - Identificar Modificadores\n",
+    "  - Controlar Modificações (Versões)\n",
+    "  - Garantir Implementações\n",
+    "  - Documentar Modificações\n",
+    "\n",
+    "![Alt text](image-19.png)\n",
+    "\n",
+    "- Dificuldades da Manutenção:\n",
+    "  - Estabilidade da equipe\n",
+    "  - Responsabilidade Contratual\n",
+    "  - Habilidade Pessoal\n",
+    "  - Idade e estrutura do programa\n",
+    "\n",
+    "- Tipos de Manutenção:\n",
+    "  - Corretiva\n",
+    "  - Adaptativa\n",
+    "  - Perfectiva\n",
+    "  - Preventiva\n",
+    "\n",
+    "## Reengenharia\n",
+    "\n",
+    "- Busca examinar os sistemas para restrutura-o para atender novos requisitos\n",
+    "\n",
+    "![Alt text](image-20.png)\n",
+    "\n",
+    "### Engenharia Reversa\n",
+    "\n",
+    "![Alt text](image-21.png)\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   }
  ],
